Date: ????
  Bugfixes:
    - Fixed a crash with boiler fluids that had no heat capacity defined
    - Fixed a crash with fluid burning boilers
    - Fixed that recipe ingredients with a minimum temperature smaller than the fluid's default
      temperature were replaced with a wrong solid
    - Fixed pyanadon's Nanocrystalline cellulose recipe not being available for all temperatures
---------------------------------------------------------------------------------------------------
Version: 4.1.26
Date: 2022.12.11
  Bugfixes:
    - Fixed that mining drone recipes that require a mining fluid where not properly ignored
---------------------------------------------------------------------------------------------------
Version: 4.1.25
Date: 2022.08.06
  Compatibility:
    - Added compatibility for the SE condenser- and big turbine
  Bugfixes:
    - Fixed that certain (un-)barreling furnaces did not work due to removed fluidboxes
    - Fixed that fluid mining drills with a collision box > 5x5 had their item output vector below
      themselves
    - Dynamically increase item result slots in furnaces depending on the output fluid box(es)
---------------------------------------------------------------------------------------------------
Version: 4.1.24
Date: 2022.07.05
  Bugfixes:
    - Fixed Pyalienlife korlex milk barrels not being properly replaced due to py using diff. names
    - Fixed Pyrawores coke oven gas items with certain temperatures having no usage
    - Fixed omni.fluid.add_multi_temp_recipe() not working under certain conditions
    - Automatically apply all exception rules for compat to compressed versions aswell
---------------------------------------------------------------------------------------------------
Version: 4.1.23
Date: 2022.06.10
  Features:
    - Added angels "coolant-cool-steam" recipe as multi temp recipe
  Bugfixes:
    - Fixed that omni.fluid.add_multi_temp_recipe() failed on fluids with both min and max temp
      not being specified