@@ -5,6 +5,7 @@ end
 if mods["pyalternativeenergy"] then
     omni.fluid.excempt_boiler("solar-tower-building")
     omni.fluid.add_multi_temp_recipe("nano-cellulose")
+    omni.fluid.add_assembler_generator_fluid("pressured-steam")
 end
 
 if mods["pycoalprocessing"] then
